# qtics

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  arduino.html  base.py  experiments.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  rename.py  search.html  searchindex.js  test.py
.github/: pull_request_template.md
.github/workflows/: analysis.yml  deploy_docs.yml  publish_release.yml  pylint.yml  tests.yml
_modules/: index.html
_modules/qinst/: instrument.html  log.html  logger.html  network_inst.html  serial_inst.html
_modules/qtics/: experiment.html  instrument.html  logger.html  network_inst.html  serial_inst.html
_sources/: arduino.rst.txt  index.rst.txt  installation.rst.txt
_sources/instruments/: 2231A.rst.txt  3494_64.rst.txt  R591722600.rst.txt  RSZNB.rst.txt  SIM928.rst.txt  SMA100B.rst.txt  proteox.rst.txt  triton.rst.txt
api-reference/: modules.html  qinst.html  qinst.instruments.html  qinst.instruments.network.html  qinst.instruments.niscope.html  qinst.instruments.serial.html  qinst.network.html  qinst.serial.html  qinst.serial.rf_attenuator_3494_64.html  qinst.serial.rf_switch_R591722600.html  qtics.html  qtics.instruments.html  qtics.instruments.network.html  qtics.instruments.niscope.html  qtics.instruments.serial.html
docs/source/: arduino.rst  conf.py  experiments.rst  index.rst  installation.rst
examples/: experiments.py
experiments/: s21_vs_temp.py
experiments/TWPA/: experiments.py  triton_monitor.py  twpa_experiment.py
experiments/s21_vs_temp/: helpers.py  s21_vs_temp.py
instruments/: 2231A.html  3494_64.html  6514.html  FSL0010.html  N9916A.html  QUICKSYNTH.html  R591722600.html  RSFSV.html  RSZNB.html  SIM928.html  SMA100B.html  VALON519.html  modules.html  proteox.html  triton.html
src/qinst/: __init__.py  experiment.py  gpib_inst.py  instrument.py  log.py  logger.py  serial_inst.py  (+1 more)
tests/: test_experiment.py  test_instrument.py  test_network_inst.py  test_serial_inst.py
(+113 files in other folders)
