[tool.poetry]
name = "qtics"
version = "0.0.4"
description = "Quantum Technologies Instrumentation ControlS"
authors = ["The BiQuTe Team"]
license = "Apache License 2.0"
readme = "README.md"
repository = "https://github.com/biqute/qtics/"
keywords = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.dependencies]
python = ">=3.11"
pyserial = "^3.5"
numpy = "^1.24"
niscope = "^1.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.analysis]
optional = true

[tool.poetry.group.analysis.dependencies]
pylint = ">=2.16.0"
pylint-exit = "^1.2.0"
pytest = ">=7.2.2"
pytest-mock = ">=3.10.0"
mypy = "^1.7.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"
furo = "^2023.3.27"
recommonmark = "^0.7.1"
sphinxcontrib-bibtex = "^2.5.0"
sphinx-markdown-tables = "^0.0.17"
nbsphinx = "^0.9.1"
sphinx-copybutton = "^0.5.1"
sphinx-last-updated-by-git = "^0.3.5"


[tool.poetry.group.experiments.dependencies]
h5py = "^3.10.0"
matplotlib = ">=3.7"

[[tool.mypy.overrides]]
module=["serial", "niscope", "h5py"]
ignore_missing_imports = true

[tool.pylint]
disable = "W1203"

[tool.codespell]
ignore-words-list = "poin,runn,sav"
skip="./.*,docs/build,poetry.lock,pyproject.toml"
